basic layout & code running done

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"npm run build && npm run start",
+    "dev": "npm run build && npm run start",
     "start": "node dist/index.js",
-    "build":"tsc -b"
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dockerode": "^3.3.31",
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
+    "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
