--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.0.23",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
