--- a/backend/package.json
+++ b/backend/package.json
@@ -13,16 +13,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.31",
     "@types/express": "^4.17.21",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "uuid": "^10.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^5.18.0"
   }
 }
