--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.17.0",
     "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.31",
