--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "typescript": "^5.5.4"
   }
 }
