--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
     "@types/cookie-parser": "^1.4.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/uuid": "^10.0.0",
