--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "db:generate":"npx prisma generate",
+    "db:migrate":"npx prisma migrate dev",
+    "db:start":"npm run db:migrate && npm run db:generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run build && npm run start",
     "start": "node dist/index.js",
-    "build": "tsc -b"
+    "build": "npm run db:start && tsc -b"
   },
   "keywords": [],
   "author": "",
