--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "db:migrate":"npx prisma migrate dev",
     "db:start":"npm run db:migrate && npm run db:generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run build && npm run start",
+    "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
     "build": "npm run db:start && tsc -b"
   },
