--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.0.23",
     "react-router-dom": "^6.26.1",
+    "react-top-loading-bar": "^2.3.1",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
